- Relocated the shuffle button to be inline with the stat label - Added star market button to the trading pair stat - Prevented the latest and 24hr volume stats from changing colour - On browser window resize, updated the order in which stats are hidden - Updated header so that the 'create acount' link doesn't wrap so early

--- a/app/assets/stylesheets/themes/_theme-template.scss
+++ b/app/assets/stylesheets/themes/_theme-template.scss
@@ -279,10 +279,8 @@ $pulsate-red-end
 
     }
     
-    .show-for-large {
-        a {
-            color: $light-text-color !important;
-        }
+    .asset-prefix {
+        color: $light-text-color !important;
     }
 
     .transfer-top {
